barra di scorrimento

--- a/Nuovo Documento di testo.html
+++ b/Nuovo Documento di testo.html
@@ -3,49 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra di Avanzamento</title>
+    <title>Barra Scroll</title>
     <style>
-        /* Stile per la barra di avanzamento */
-        .progress-container {
-            position: fixed;  /* Posiziona la barra fissa in alto */
-            top: 0;
+        body {
+            height: 200vh; /* Altezza estesa per abilitare lo scroll */
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container {
+            position: fixed;
+            top: 50%;
             left: 0;
             width: 100%;
-            height: 5px;
-            background-color: #f3f3f3;
-            z-index: 1000;  /* Mantieni la barra sopra al contenuto */
+            transform: translateY(-50%);
         }
-
-        .progress-bar {
-            height: 100%;
-            background-color: #4caf50; /* Colore della barra */
-            width: 0%; /* Inizia con larghezza 0 */
+        .bar {
+            height: 20px;
+            background-color: #3498db;
+            width: 0%; /* Larghezza iniziale */
+            transition: width 0.1s linear;
         }
     </style>
 </head>
 <body>
-
-    <!-- Barra di avanzamento -->
-    <div class="progress-container">
-        <div class="progress-bar" id="progress-bar"></div>
-    </div>
-
-    <!-- Contenuto della pagina -->
-    <div style="height: 2000px;"> <!-- Semplice contenuto lungo per testare lo scorrimento -->
-        <h1>Scorri giù per vedere la barra di avanzamento!</h1>
+    <div class="container">
+        <div class="bar" id="bar"></div>
     </div>
 
     <script>
-        // Funzione per aggiornare la barra di avanzamento in base allo scorrimento
-        window.onscroll = function() {
-            var docHeight = document.documentElement.scrollHeight - window.innerHeight;
-            var scrollPosition = window.scrollY;
-            var progress = (scrollPosition / docHeight) * 100; // Calcola la percentuale di scorrimento
-
-            // Aggiorna la larghezza della barra di avanzamento
-            document.getElementById("progress-bar").style.width = progress + "%";
-        };
+        window.addEventListener('scroll', function() {
+            let scrollTop = window.scrollY;
+            let docHeight = document.documentElement.scrollHeight - window.innerHeight;
+            let scrollPercent = (scrollTop / docHeight) * 100;
+            document.getElementById('bar').style.width = scrollPercent + '%';
+        });
     </script>
-
 </body>
 </html>
